ares/deployments/production/ares-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ares-service
spec:
  type: NodePort
  ports:
    - name: default
      port: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: ares
    app.kubernetes.io/component: server
